fixed abnormal spacing in homepage

--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,5 +1,5 @@
 /* Global styles for the body */
-body {
+/* body {
     font-family: "Arial", sans-serif; 
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@ body {
     align-items: center;
     background-color: #f9f9f9; 
     width: 100%;
-  }
+  } */
   
   /* Navigation bar styles */
   nav {
